@@ -212,6 +212,7 @@ t/132_cancel_save_tiff.t
 t/133_save_tiff_with_error.t
 t/141_save_image.t
 t/142_save_image_with_quote.t
+t/143_save_image_with_ampersand.t
 t/151_save_text.t
 t/152_save_utf8.t
 t/153_save_hocr_as_text.t
