@@ -13,7 +13,7 @@ Package: gscan2pdf
 Architecture: all
 Depends: libgtk2-imageview-perl, libgtk2-ex-simple-list-perl,
  libsane-perl (>= 0.05~0), liblocale-gettext-perl (>= 1.05),
- sane-utils (>= 1.0.17), libtiff-tools, libpdf-api2-perl,
+ sane-utils (>= 1.0.17), libtiff-tools, libpdf-api2-perl, libipc-run3-perl,
  libconfig-general-perl (>= 2.40), libimage-magick-perl, imagemagick,
  librsvg2-common, libset-intspan-perl (>= 1.10), liblist-moreutils-perl,
  libhtml-parser-perl, libgoo-canvas-perl, libproc-processtable-perl,
