@@ -2,7 +2,7 @@ gscan2pdf (1.6.0-1) unstable; urgency=low
 
   * New upstream release
     Closes: #842239 (Arbitrary document metadata date chosen)
-    New Depends: libdate-calc-perl
+    New Depends: libdate-calc-perl, libipc-run3-perl
 
  --
 
